[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/characters/player.png" type="Texture" id=1]
[ext_resource path="res://Windows/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Windows/MainWindow.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1168.0
margin_top = -696.0
margin_right = 1128.0
margin_bottom = 728.0
color = Color( 0, 0.521569, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = -283.0
margin_top = -175.0
margin_right = 282.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 565.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 565.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 250.0
margin_right = 314.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 68.0
margin_right = 565.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 2 )
text = "Welcome in Square Jump"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 565.0
margin_bottom = 350.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 565.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLevels" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 565.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 2 )
text = "Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 565.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
[connection signal="button_up" from="CenterContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/VBoxContainer/ButtonLevels" to="." method="_on_ButtonLevels_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_button_up"]
